payment-service/k8s/dev-deployment-cass.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service-cass-loadbalancer
spec:
  selector:
    app: payment-service-cass
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-cass
spec:
  selector:
    matchLabels:
      app: payment-service-cass
  replicas: 1
  template:
    metadata:
      labels:
        app: payment-service-cass
    spec:
      containers:
      - name: payment-service
        image: payment-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
